Fixed overflow issues

--- a/postcss/style.pcss
+++ b/postcss/style.pcss
@@ -153,6 +153,7 @@ h3.section-title {
 
 .sq-list-content {
 	font-size: 14px;
+	overflow: hidden;
 }
 
 
@@ -282,7 +283,7 @@ h3.section-title {
 	box-shadow: 0 1px 4px rgba(0,0,0,0.5);
 }
 
-.sq-list-item::after {
+.websites .sq-list-item::after {
 	content: '';
 	display: table;
 	clear: both;
